# aeron-cache-embedded

./: .gitignore  BUILD  README.md  WORKSPACE  release.sh  run-all-samples.sh  run-streaming-samples.sh
.github/workflows/: java-ci.yml  python-ci.yml  release-java.yml  release-python.yml  release-rust.yml  release-typescript.yml  rust-ci.yml  typescript-ci.yml
instructions/: library-generation.instructions.md
libraries/java/: BUILD  README.md  build.gradle.kts  settings.gradle.kts
libraries/python/: BUILD  README.md  pyproject.toml
libraries/python/aeron_cache/: client.py  embedded_cache.py  models.py
libraries/python/tests/: test_client.py  test_embedded_cache.py  test_integration.py
libraries/rust/: BUILD  Cargo.toml  README.md
libraries/rust/src/: embedded_cache.rs  lib.rs
libraries/rust/tests/: client_tests.rs  embedded_cache_tests.rs  integration_tests.rs
libraries/typescript/: BUILD  README.md  package-lock.json  package.json
libraries/typescript/src/: embedded_cache.test.ts  embedded_cache.ts  index.test.ts  index.ts  integration.test.ts  models.ts  ws.test.ts
openapi/: rest-api.yaml  ws-api.yaml
samples/: README.md
samples/java/async-sample/: README.md  build.gradle.kts  settings.gradle.kts
samples/java/bulk-sample/: build.gradle.kts
samples/java/streaming-sample/: README.md  build.gradle.kts  settings.gradle.kts
samples/java/sync-sample/: README.md  build.gradle.kts  settings.gradle.kts
samples/python/async-sample/: README.md  async_sample.py  pyproject.toml
samples/python/bulk-sample/: bulk_sample.py  pyproject.toml
samples/python/streaming-sample/: README.md  pyproject.toml  streaming_sample.py
samples/python/sync-sample/: README.md  pyproject.toml  sync_sample.py
samples/rust/async-sample/: Cargo.toml  README.md
samples/rust/bulk-sample/: Cargo.toml
samples/rust/streaming-sample/: Cargo.toml  README.md
samples/rust/sync-sample/: Cargo.toml  README.md
samples/typescript/async-sample/: README.md  package-lock.json  package.json
samples/typescript/bulk-sample/: package.json
samples/typescript/streaming-sample/: README.md  package-lock.json  package.json
samples/typescript/sync-sample/: README.md  package.json
(+52 files in other folders)
