[tool.poetry]
name = "aeron-cache-embedded-client"
version = "1.0.0"
description = "Python Client for Aeron Cache with Embedded Cache support"
authors = ["Sample Author <author@example.com>"]
readme = "README.md"
packages = [{include = "aeron_cache"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.25.0"
aiohttp = "^3.7.0"
websockets = "^10.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
pytest-asyncio = "^1.3.0"
responses = "^0.26.0"
aioresponses = "^0.7.8"
pytest-mock = "^3.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
