[package]
name = "aeron-cache-embedded-client"
version = "0.1.0"
edition = "2021"
description = "Rust Client for Aeron Cache with Embedded Cache support"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = { version = "0.19", features = ["rustls-tls-native-roots"] }
url = "2.4"
tokio = { version = "1.0", features = ["full"], optional = true }

[lib]
name = "aeron_cache_embedded_client"
path = "src/lib.rs"
